--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Singapore Doggy Adoption</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+
+<body>
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#featured-dogs">Featured Dogs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#adoption-process">Adoption Process</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact-form">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <section id="featured-dogs">
+        <div class="container">
+            <h2 class="text-center">Featured Dogs</h2>
+            <div class="row">
+                <!-- Dog Cards go here -->
+                <div class="col-md-4">
+                    <div class="dog-card">
+                        <img src="Dash_Dog.png" alt="Dog 1" width="300" height="300">
+                        <div class="dog-details">
+                            <h3>Dash</h3>
+                            <p>Age: 9 Months</p>
+                            <p>Breed: Border Collie</p>
+                            <p>Status: Available</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="dog-card">
+                        <img src="Max_Dog.jpeg" alt="Dog 2" width="300" height="300">
+                        <div class="dog-details">
+                            <h3>Max</h3>
+                            <p>Age: 2 Months</p>
+                            <p>Breed: Corgi</p>
+                            <p>Status: Available</p>
+                        </div>
+                    </div>
+                </div>
+                <p> ------------------------------------------------------------------------------------------------------------------------------------------------------------- </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="adoption-process">
+        <div class="container">
+            <h2 class="text-center">Adoption Process</h2>
+                <p>Step 1: Browse our adoption gallery</p>
+                <p>Step 2: Book an appointment</p>
+                <p>Step 3: Show up for your appointment on time</p>
+                
+                <ul>
+                    <li>Please present your ID or show the confirmation email at the SPCA for verification purposes</li>
+                    <li>If the adoption counselling and interactions between the animal goes well (and find that the animal is a good fit for your family), you may adopt the animal on the spot when you visit SPCA; you will need documents showing your address and your passport / FIN. Please note that we do not have any reservation policy and are only able to hold the animal for 3 days after your initial adoption counselling, where our adoption counsellors approve the adoption</li>
+                    <li>If you're adopting a cat, it is compulsory to mesh windows and doors at home, if you stay on the second floor and above</li>
+                    <li>A counsellor might require additional family members to come down or do a premises check - in such cases, conditions must be fulfilled before the adoption</li>
+                    <li>The whole procedure should not take more than an hour</li>
+                </ul>
+        </div>
+    </section>
+
+    <!-- Contact Form Section -->
+    <section id="contact-form">
+        <div class="container">
+            <h2 class="text-center">Contact Us</h2>
+            <!-- Contact form goes here -->
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="container">
+            <!-- Footer content goes here -->
+        </div>
+    </footer>
+
+    <!-- Include Bootstrap JS and Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
