--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
                         <p>Status: Available</p>
                     </div>
                 </div>
+                <div class="bunny-card">
+                    <a href="bunny5.html"><img src="Simba_Bunny.jpeg" alt="Bunny 5" width="300" height="300"></a>
+                    <div class="bunny-details">
+                        <h3>Simba</h3>
+                        <p>Age: 4 Months</p>
+                        <p>Breed: Lionhead</p>
+                        <p>Status: Available</p>
+                    </div>
+                </div>
+                <div class="bunny-card">
+                    <a href="bunny6.html"><img src="Minty_Bunny.png" alt="Bunny 6" width="300" height="300"></a>
+                    <div class="bunny-details">
+                        <h3>Minty</h3>
+                        <p>Age: 4 Months</p>
+                        <p>Breed: Holland Lop</p>
+                        <p>Status: Available</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
