--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metadata and External Resources -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Singapore Bunny Adoption</title>
@@ -13,11 +14,14 @@
 
 <body>
     <header class="fixed-top">
+        <!-- Navigation bar -->
         <nav class="navbar">
+            <!-- Logo -->
             <img src="Logo.png" alt="logo">
             <a class="navbar-brand" href="#">Singapore Bunny Adoption</a>
             <div class="navbarbuttons">
                 <ul>
+                    <!-- Navigation links -->
                     <li><a href="#about-us">About Us</a></li>
                     <li><a href="#recommended-bunnies">Recommended Bunnies</a></li>
                     <li><a href="#adoption-process">Adoption Process</a></li>
@@ -30,6 +34,7 @@
     <div class="content">
         <img src="background.webp" alt="background" width="100%" height="auto">
     <section id="about-us">
+        <!-- About Us Section -->
         <div class="container">
             <h1 class="text-center">About Us</h1>
             <h3>About Us</h3>
@@ -52,6 +57,7 @@
                 
 
     <section id="recommended-bunnies">
+        <!-- Recommended Bunnies Section -->
         <div class="container">
         <h2 class="text-center">Recommended Bunnies</h2>
             <div class="bunny-container">
@@ -114,6 +120,7 @@
     </section>
 
     <div class="container">
+        <!-- Image Slider -->
         <h2 class="text-center">Our cute bunnies up-close!</h2>
         <div class="slider">
             <div class="img-box">
@@ -126,6 +133,7 @@
     </div>
 
     <section id="adoption-process">
+        <!-- Adoption Process Section -->
         <div class="container">
             <h2 class="text-center">Adoption Process</h2>
                 <p>Step 1: Browse our adoption gallery</p>
@@ -142,6 +150,7 @@
     </section>
 
     <section id="contact-form">
+        <!-- Contact Us Section -->
         <div class="container">
             <h2 class="text-center">Contact Us</h2>
             <p>If you have any questions or inquiries, feel free to contact us:</p>
@@ -154,6 +163,7 @@
     <script src="script.js"></script>
 
     <footer>
+        <!-- Footer -->
         <div class="container">
             <p>&copy; 2023 Singapore Bunny Adoption. All rights reserved.</p>
         </div>
