linked html files to folder

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <!-- Navigation bar -->
         <nav class="navbar">
             <!-- Logo -->
-            <img src="Logo.png" alt="logo">
+            <img src="images/Logo.png" alt="logo">
             <a class="navbar-brand" href="#">Singapore Bunny Adoption</a>
             <div class="navbarbuttons">
                 <ul>
@@ -32,7 +32,7 @@
     </header>
 
     <div class="content">
-        <img src="background.webp" alt="background" width="100%" height="auto">
+        <img src="images/background.webp" alt="background">
     <section id="about-us">
         <!-- About Us Section -->
         <div class="container">
@@ -62,7 +62,7 @@
         <h2 class="text-center">Recommended Bunnies</h2>
             <div class="bunny-container">
                 <div class="bunny-card">
-                    <a href="bunny1.html"><img src="Dusty_Bunny.png" alt="Bunny 1" width="300" height="300"></a>
+                    <a href="bunny1.html"><img src="images/Dusty_Bunny.png" alt="Bunny 1" width="300" height="300"></a>
                     <div class="bunny-details">
                         <h3>Dusty</h3>
                         <p>Age: 5 Months</p>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="bunny-card">
-                    <a href="bunny2.html"><img src="Kaya_Bunny.jpeg" alt="Bunny 2" width="300" height="300"></a>
+                    <a href="bunny2.html"><img src="images/Kaya_Bunny.jpeg" alt="Bunny 2" width="300" height="300"></a>
                     <div class="bunny-details">
                         <h3>Kaya</h3>
                         <p>Age: 3 Months</p>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="bunny-card">
-                    <a href="bunny3.html"><img src="Bella_Bunny.jpg" alt="Bunny 3" width="300" height="300"></a>
+                    <a href="bunny3.html"><img src="images/Bella_Bunny.jpg" alt="Bunny 3" width="300" height="300"></a>
                     <div class="bunny-details">
                         <h3>Bella</h3>
                         <p>Age: 6 Months</p>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="bunny-card">
-                    <a href="bunny4.html"><img src="Hazel_Bunny.jpg" alt="Bunny 4" width="300" height="300"></a>
+                    <a href="bunny4.html"><img src="images/Hazel_Bunny.jpg" alt="Bunny 4" width="300" height="300"></a>
                     <div class="bunny-details">
                         <h3>Hazel</h3>
                         <p>Age: 3 Months</p>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="bunny-card">
-                    <a href="bunny5.html"><img src="Simba_Bunny.jpeg" alt="Bunny 5" width="300" height="300"></a>
+                    <a href="bunny5.html"><img src="images/Simba_Bunny.jpeg" alt="Bunny 5" width="300" height="300"></a>
                     <div class="bunny-details">
                         <h3>Simba</h3>
                         <p>Age: 4 Months</p>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="bunny-card">
-                    <a href="bunny6.html"><img src="Minty_Bunny.png" alt="Bunny 6" width="300" height="300"></a>
+                    <a href="bunny6.html"><img src="images/Minty_Bunny.png" alt="Bunny 6" width="300" height="300"></a>
                     <div class="bunny-details">
                         <h3>Minty</h3>
                         <p>Age: 4 Months</p>
@@ -124,7 +124,7 @@
         <h2 class="text-center">Our cute bunnies up-close!</h2>
         <div class="slider">
             <div class="img-box">
-               <img src="Dusty_Bunny.png" class="slider-img">
+               <img src="images/Dusty_Bunny.png" class="slider-img" alt="bunny image">
             </div>
         
             <button class="btn" onclick="prev()">Prev</button>
@@ -160,7 +160,7 @@
     </section>
     </div>  
 
-    <script src="script.js"></script>
+    <script src="javascript/script.js"></script>
 
     <footer>
         <!-- Footer -->
