--- a/bunny1.html
+++ b/bunny1.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header class="fixed-top">
         <nav class="navbar">
-            <img src="Logo.png" alt="logo">
+            <img src="images/Logo.png" alt="logo">
             <a class="navbar-brand" href="index.html">Singapore Bunny Adoption</a>
             <div class="navbarbuttons">
                 <ul>
@@ -28,7 +28,7 @@
 
     <section class="bunnyprofile">
         <div class="description">
-            <img src="Dusty_Bunny.png" alt="Bunny 1" width="800" height="800">
+            <img src="images/Dusty_Bunny.png" alt="Bunny 1" width="800" height="800">
         </div>
         <div class="description">
             <h2>Name: Dusty</h2>
@@ -44,7 +44,7 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="javascript/script.js"></script>
     
     <footer>
         <div class="container">
